--- a/RJ/styles.css
+++ b/RJ/styles.css
@@ -13,11 +13,10 @@ html {
 
 body {
     position: relative;
-    min-width: 670px;
-    width: 80%;
+    width: 94%;
     margin: 0 auto;
     padding: 0;
-    font: "Times New Roman", Times, serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #111;
 }
 
@@ -39,20 +38,11 @@ a:focus, a:active {
     background-color: #555;
 }
 
+a {
+    font-weight: bold;
+}
+
 /* Styling headings *******************************************/
-h2, h3 {
-    color: #250025;
-    font: normal 150% Georgia, "Times New Roman", Times, serif;
+h2 {
     margin-top: 0;
 }
-
-h3 {
-    font-size: 135%;
-}
-
-h4 {
-    margin-bottom: -1em;
-}
-
-
-
