--- a/RJ/styles.css
+++ b/RJ/styles.css
@@ -18,6 +18,7 @@ body {
     padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #111;
+    text-align: center;
 }
 
 /* Styling links **********************************************/
