--- a/RJ/styles.css
+++ b/RJ/styles.css
@@ -13,11 +13,17 @@ html {
 
 body {
     position: relative;
-    width: 92%;
+    width: 94%;
     margin: 0 auto;
     padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #111;
+}
+
+@media (min-width: 480px) {
+    body {
+        width: 80%;
+    }
 }
 
 /* Styling links **********************************************/
